============================
GPointinDeviceSettings 1.?.?
============================
* Touchpad
 - Palm detection
 - Tap move
 - Fix invalid values for scroll distance

============================
GPointinDeviceSettings 1.2.0
============================
* Overall
 - New appearance
 - Fix crashes due to X errors.
 - Fix parallel make issue reported by Wendall Cada.
* New translation
 - Spanish

============================
GPointinDeviceSettings 1.1.0
============================
* Overall
 - When gnome-settings-daemon plugin starts, restoring the values which are set by user
 - Install GConf schema
* Touchpad
 - Continuous edge scrolling on/off
 - Two finger scrolling on/off
* Wheel type mouse
 - Change wheel emulation button widget to GtkComboBox
 - Fix vertical and horizontal scrolling inversion
 - Fix wrong wheel emulation button
 - Fix key mnemonic
 - Ignore "Macintosh mouse button emulation" device
* New translation
 - British English

============================
GPointinDeviceSettings 1.0.0
============================

* Overall 
 - Try to show all XExtensionPointer
 - Unify plugins for gnome-settings-daemon
* TrackPoint
 - Wheel emulation button support

============================
GPointinDeviceSettings 0.9.1
============================

* Overall 
 - Address XInput-1.4.0
 - Fix crashes due to X errors
* Touchpad
 - support for on/off/tapping and scrolling off
 - support for circular scrolling trigger
* New translation
 - Swedish

============================
GPointinDeviceSettings 0.9.0
============================

Initial release.