@@ -1,6 +1,13 @@
 <?xml version="1.0"?>
 <!--*- mode: xml -*-->
 <interface>
+  <object class="GtkAdjustment" id="locked_drags_timeout_scale_adjustment">
+    <property name="lower">50</property>
+    <property name="upper">550</property>
+    <property name="step-increment">50</property>
+    <property name="page_increment">50</property>
+    <property name="page_size">0</property>
+  </object>
   <object class="GtkAdjustment" id="tapping_time_scale_adjustment">
     <property name="upper">550</property>
     <property name="lower">50</property>
@@ -142,25 +149,25 @@
                             </child>
                           </object>
                         </child>
-			<child>
-			  <object class="GtkLabel" id="label4">
-			    <property name="visible">True</property>
-			    <property name="label" translatable="yes">&lt;b&gt;Palm Detection&lt;/b&gt;</property>
-			    <property name="use_underline">False</property>
-			    <property name="use_markup">True</property>
-			    <property name="justify">GTK_JUSTIFY_LEFT</property>
-			    <property name="wrap">False</property>
-			    <property name="selectable">False</property>
-			    <property name="xalign">0</property>
-			    <property name="yalign">0</property>
-			    <property name="xpad">0</property>
-			    <property name="ypad">0</property>
-			    <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-			    <property name="width_chars">-1</property>
-			    <property name="single_line_mode">False</property>
-			    <property name="angle">0</property>
-			  </object>
-			</child>
+                        <child>
+                          <object class="GtkLabel" id="palm_detection_label">
+                            <property name="visible">True</property>
+                            <property name="label" translatable="yes">&lt;b&gt;Palm Detection&lt;/b&gt;</property>
+                            <property name="use_underline">False</property>
+                            <property name="use_markup">True</property>
+                            <property name="justify">GTK_JUSTIFY_LEFT</property>
+                            <property name="wrap">False</property>
+                            <property name="selectable">False</property>
+                            <property name="xalign">0</property>
+                            <property name="yalign">0</property>
+                            <property name="xpad">0</property>
+                            <property name="ypad">0</property>
+                            <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+                            <property name="width_chars">-1</property>
+                            <property name="single_line_mode">False</property>
+                            <property name="angle">0</property>
+                          </object>
+                        </child>
                         <child>
                           <object class="GtkCheckButton" id="palm_detection">
                             <property name="visible">True</property>
@@ -171,6 +178,138 @@
                             <property name="padding">0</property>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkLabel" id="locked_drags_label">
+                            <property name="visible">True</property>
+                            <property name="label" translatable="yes">&lt;b&gt;Locked Drags&lt;/b&gt;</property>
+                            <property name="use_underline">False</property>
+                            <property name="use_markup">True</property>
+                            <property name="justify">GTK_JUSTIFY_LEFT</property>
+                            <property name="wrap">False</property>
+                            <property name="selectable">False</property>
+                            <property name="xalign">0</property>
+                            <property name="yalign">0</property>
+                            <property name="xpad">0</property>
+                            <property name="ypad">0</property>
+                            <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+                            <property name="width_chars">-1</property>
+                            <property name="single_line_mode">False</property>
+                            <property name="angle">0</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkCheckButton" id="locked_drags">
+                            <property name="visible">True</property>
+                            <property name="label" translatable="yes">Enable _locked drags</property>
+                            <property name="use_underline">True</property>
+                          </object>
+                          <packing>
+                            <property name="padding">0</property>
+                            <property name="expand">False</property>
+                            <property name="fill">False</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkHBox" id="locked_drags_box">
+                            <property name="visible">True</property>
+                            <property name="border-width">5</property>
+                            <child>
+                              <object class="GtkLabel" id="locked_drags_timeout_label">
+                                <property name="visible">True</property>
+                                <property name="label" translatable="yes">_timeout:</property>
+                                <property name="mnemonic-widget">locked_drags_timeout_scale</property>
+                                <property name="use_underline">True</property>
+                                <property name="use_markup">False</property>
+                                <property name="justify">GTK_JUSTIFY_LEFT</property>
+                                <property name="wrap">False</property>
+                                <property name="selectable">False</property>
+                                <property name="xalign">0.5</property>
+                                <property name="yalign">0.5</property>
+                                <property name="xpad">0</property>
+                                <property name="ypad">0</property>
+                                <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+                                <property name="width_chars">-1</property>
+                                <property name="single_line_mode">False</property>
+                                <property name="angle">0</property>
+                              </object>
+                              <packing>
+                                <property name="padding">0</property>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkLabel" id="locked_drags_timeout_left_label">
+                                <property name="visible">True</property>
+                                <property name="label" translatable="yes">&lt;i&gt;Short&lt;/i&gt;</property>
+                                <property name="use_underline">False</property>
+                                <property name="use_markup">True</property>
+                                <property name="justify">GTK_JUSTIFY_LEFT</property>
+                                <property name="wrap">False</property>
+                                <property name="selectable">False</property>
+                                <property name="xalign">0.5</property>
+                                <property name="yalign">0.5</property>
+                                <property name="xpad">0</property>
+                                <property name="ypad">0</property>
+                                <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+                                <property name="width_chars">-1</property>
+                                <property name="single_line_mode">False</property>
+                                <property name="angle">0</property>
+                              </object>
+                              <packing>
+                                <property name="padding">0</property>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkHScale" id="locked_drags_timeout_scale">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="draw_value">False</property>
+                                <property name="value_pos">GTK_POS_TOP</property>
+                                <property name="digits">0</property>
+                                <property name="update_policy">GTK_UPDATE_DISCONTINUOUS</property>
+                                <property name="inverted">False</property>
+                                <property name="adjustment">locked_drags_timeout_scale_adjustment</property>
+                              </object>
+                              <packing>
+                                <property name="padding">0</property>
+                                <property name="expand">True</property>
+                                <property name="fill">True</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkLabel" id="locked_drags_timeout_right_label">
+                                <property name="visible">True</property>
+                                <property name="label" translatable="yes">&lt;i&gt;Long&lt;/i&gt;</property>
+                                <property name="use_underline">False</property>
+                                <property name="use_markup">True</property>
+                                <property name="justify">GTK_JUSTIFY_LEFT</property>
+                                <property name="wrap">False</property>
+                                <property name="selectable">False</property>
+                                <property name="xalign">0.5</property>
+                                <property name="yalign">0.5</property>
+                                <property name="xpad">0</property>
+                                <property name="ypad">0</property>
+                                <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+                                <property name="width_chars">-1</property>
+                                <property name="single_line_mode">False</property>
+                                <property name="angle">0</property>
+                              </object>
+                              <packing>
+                                <property name="padding">0</property>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                              </packing>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="padding">0</property>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
                           </packing>
                         </child>
                       </object>
